# libya_customizations

./: pyproject.toml
libya_customizations/: __init__.py  events.py  hooks.py  patches.txt  utils.py
libya_customizations/fixtures/: number_card.json  property_setter.json  server_script.json
libya_customizations/libya_customizations/custom/: customer_group.json  item.json  purchase_invoice.json  purchase_receipt.json  territory.json  warehouse.json
libya_customizations/libya_customizations/doctype/account_closing_detail/: account_closing_detail.json  account_closing_detail.py
libya_customizations/libya_customizations/doctype/account_closing_voucher/: account_closing_voucher.js  account_closing_voucher.json  account_closing_voucher.py  test_account_closing_voucher.py
libya_customizations/libya_customizations/doctype/clearing_voucher/: clearing_voucher.json  clearing_voucher.py
libya_customizations/libya_customizations/doctype/debt_voucher/: debt_voucher.py
libya_customizations/libya_customizations/doctype/tire_size/: tire_size.js  (+3 more)
libya_customizations/overrides/: repost_sl.py  sales_order.py
libya_customizations/patches/: create_sales_order_overdue_bypass.py  setup_account_closing_entry.py
libya_customizations/patches/v15/: update_payment_status.py
libya_customizations/public/: item_price_list.js  journal_entry.js  payment_entry.js  purchase_invoice.js  sales_order.js  utils.js
libya_customizations/server_script/: Item.py  item_price.py  purchase_invoice.py  purchase_receipt.py  sales_invoice.py  sales_order.py  stock_entry.py  stock_ledger_entry.py
(+23 files in other folders)
