[project]
name = "libya_customizations"
authors = [
    { name = "Ahmed Zaytoon", email = "citybirdman@gmail.com"}
]
description = "for all customizations for libya"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
